--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,9 @@
-
-
-Flask==2.2.2
-gunicorn==20.1.0
-
-holidays==0.16
-itsdangerous==2.1.2
-Jinja2==3.1.2
-
-MarkupSafe==2.1.1
-
-python-dateutil==2.8.2
-
-
-Werkzeug==2.2.2
-WTForms==3.0.1
+Flask
+gunicorn
+holidays
+itsdangerous
+Jinja2
+MarkupSafe
+python-dateutil
+Werkzeug
+WTForms
